--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "oic>=1.7.0",
     "recipe-scrapers>=15.6.0",
     "celery>=5.4.0",
-    "sqlite-icu>=1.0",
+    # "sqlite-icu>=1.0",  # Temporarily commented out - requires compilation on Windows
     "lark>=1.2.2",
     "dbscan1d>=0.2.3",
     "pyjwt==2.9.0",
@@ -40,8 +40,8 @@ dependencies = [
     "werkzeug>=3.1.3",
     "nltk>=3.9.1",
     "psycopg2-binary>=2.9.10",
-    "uWSGI>=2.0.28",
-    "uwsgi-tools>=1.1.1",
+    # "uWSGI>=2.0.28",  # Unix-only, not needed for Windows development
+    # "uwsgi-tools>=1.1.1",  # Unix-only, not needed for Windows development
 ]
 
 [dependency-groups]
