feat: Implement loyalty card management with dedicated UI and backend models, and add comprehensive server deployment guides.

--- a/kitchenowl/pubspec.yaml
+++ b/kitchenowl/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   fuzzywuzzy: ^1.2.0
   barcode_widget: ^2.0.4
   mobile_scanner: ^5.2.3
+  screen_brightness: ^1.0.1
 
 dev_dependencies:
   flutter_test:
