--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,8 +40,9 @@ dependencies = [
     "werkzeug>=3.1.3",
     "nltk>=3.9.1",
     "psycopg2-binary>=2.9.10",
-    "uWSGI>=2.0.28",  # Unix-only - required for Docker deployment
-    "uwsgi-tools>=1.1.1",  # Unix-only - required for Docker deployment
+    # UNCOMMENT THE FOLLOWING LINES FOR DOCKER DEPLOYMENT
+    # "uWSGI>=2.0.28",
+    # "uwsgi-tools>=1.1.1",
 ]
 
 [dependency-groups]
